[package]
name = "lilygo-spark-nt"
version = "0.1.0"
edition = "2024"
description = "LILYGO Spark NT - A GPUI-based cross-platform desktop application"
license = "MIT"
repository = "https://github.com/eggfly/LILYGO-Spark-NT"

[dependencies]
gpui = "0.2.2"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[package.metadata.bundle]
name = "LILYGO Spark NT"
identifier = "cc.lilygo.spark-nt"
icon = ["resources/app-icon.png"]
osx_minimum_system_version = "10.15.7"
