[package]
name = "lilygo-spark-nt"
version = "0.1.0"
edition = "2024"
description = "LILYGO Spark NT - A GPUI-based cross-platform desktop application"
license = "MIT"
repository = "https://github.com/eggfly/LILYGO-Spark-NT"

[dependencies]
gpui = "0.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
log = "0.4"
env_logger = "0.11"
sys-locale = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Wdk_System_SystemServices", "Win32_Foundation"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[package.metadata.bundle]
name = "LILYGO Spark NT"
identifier = "cc.lilygo.spark-nt"
icon = ["resources/app-icon.png"]
osx_minimum_system_version = "10.15.7"
